# ros-common

./: .gitignore  readme.md  source_me.bash
scripts/shell/: ros.bash
src/cmake_common/: CMakeLists.txt  package.xml
src/cmake_common/cmake/: arguments.cmake  packages.cmake
src/cmake_common/cmake/ros/: add_ament_library.cmake  add_ros_component_node.cmake  link_self_interface.cmake
src/cmake_common/doc/: CMakeLists.txt  conf.py  index.rst
src/cmake_common/examples/: add_ament_library.cmake  add_ros_component_node.cmake
src/cmake_common/scripts/: cmake_common-extras.cmake
src/doc_common/: CMakeLists.txt  package.xml
src/doc_common/cmake/: FindSphinx.cmake  add_doxygen_doc.cmake  add_sphinx_doc.cmake  common.cmake
src/doc_common/doc/: CMakeLists.txt  conf.py  index.rst
src/doc_common/doc/src/: python.rst
src/doc_common/doc_common/: __init__.py  sphinx.py
src/doc_common/examples/: add_doxygen_doc.cmake  add_sphinx_doc.cmake
src/doc_common/scripts/: doc_common-extras.cmake
src/doc_common/templates/doxygen/: common.doxyfile  default.doxyfile
src/doc_common/templates/sphinx/: conf.py  index.rst
src/launch_common/: CMakeLists.txt  package.xml
src/launch_common/doc/: CMakeLists.txt  conf.py  index.rst
src/launch_common/doc/src/: arguments.rst  config.rst  includes.rst  models.rst
src/launch_common/launch_common/: __init__.py  arguments.py  config.py  includes.py  models.py
src/node_common_cpp/: CMakeLists.txt  package.xml
src/node_common_cpp/doc/: CMakeLists.txt  Doxyfile  index.rst
src/node_common_cpp/doc/src/: communication.rst  node.rst  parameters.rst
src/node_common_cpp/include/: node_common.hpp
src/node_common_cpp/include/node_common/: communication.hpp  node.hpp  parameters.hpp
src/node_common_cpp/include/node_common/communication/: communication.hpp
src/node_common_cpp/include/node_common/node/: node.hpp
src/node_common_cpp/include/node_common/parameters/: conversions.hpp  parameters.hpp  traits.hpp
src/package_common_cpp/: CMakeLists.txt  package.xml
src/package_common_cpp/doc/: CMakeLists.txt  Doxyfile  conf.py  index.rst
src/package_common_cpp/doc/src/: packages.rst  resources.rst
src/package_common_cpp/include/: package_common.hpp
src/package_common_cpp/include/package_common/: packages.hpp  resources.hpp
src/package_common_cpp/include/package_common/resources/: resources.hpp
src/package_common_cpp/src/: resources.cpp
src/package_common_py/: CMakeLists.txt  package.xml
src/package_common_py/doc/: CMakeLists.txt  conf.py  index.rst
src/package_common_py/doc/src/: requester.rst
src/package_common_py/package_common_py/: __init__.py  requester.py
src/ros_common/: CMakeLists.txt  package.xml
src/ros_common/doc/: CMakeLists.txt  conf.py  index.rst
src/ros_common/doc/src/links/: __init__.py  extlinks.py  intersphinx.py
