<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <!-- Package's name -->
    <name>cmake_common</name>
    <!-- Package's version -->
    <version>0.0.0</version>
    <!-- Package's description -->
    <description>

    Set of common cmake routines
    
    </description>
    <!-- Package's authors -->
    <author email="krzysztof.pierczyk@gmail.com">Krzysztof Pierczyk</author>
    <!-- Package's maintainer -->
    <maintainer email="krzysztof.pierczyk@gmail.com">Krzysztof Pierczyk</maintainer>
    <!-- Package's license -->
    <license>MIT</license>

    <!-- Package's build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>doc_common</buildtool_depend>
    <!-- Package's build export dependencies -->
    <buildtool_export_depend>ament_cmake</buildtool_export_depend>
    <buildtool_export_depend>rclcpp</buildtool_export_depend>
    <buildtool_export_depend>rclcpp_components</buildtool_export_depend>
    <buildtool_export_depend>rosidl_default_generators</buildtool_export_depend>

    <!-- Package's exports -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
