<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <!-- Package's name -->
    <name>node_common_cpp</name>
    <!-- Package's version -->
    <version>0.0.0</version>
    <!-- Package's description -->
    <description>Package implementing common mechanisms for playing with ROS2 nodes</description>
    <!-- Package's maintainer -->
    <maintainer email="krzysztof.pierczyk@gmail.com">Krzysztof Pierczyk</maintainer>
    <!-- Package's license -->
    <license>MIT</license>

    <!-- Package's build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>cmake_common</buildtool_depend>
    <buildtool_depend>doc_common</buildtool_depend>
    <!-- Package's buildtime export dependencies -->
    <build_export_depend>rclcpp</build_export_depend>
    <!-- Package's runtime dependencies -->
    <exec_depend>rclcpp</exec_depend>

    <!-- Package's exports -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
