<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <!-- Package's name -->
    <name>ros_common</name>
    <!-- Package's version -->
    <version>0.0.0</version>
    <!-- Package's description -->
    <description>
    
    Set of libraries improving creating and maintaining ROS2 packages

    </description>
    <!-- Package's author -->
    <author email="krzysztof.pierczyk@gmail.com">Krzysztof Pierczyk</author>
    <!-- Package's maintainer -->
    <maintainer email="krzysztof.pierczyk@gmail.com">Krzysztof Pierczyk</maintainer>
    <!-- Package's license -->
    <license>MIT</license>
    
    <!-- Package's build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>doc_common</buildtool_depend>
    <!-- Package's dependencies -->
    <depend>cmake_common</depend>
    <depend>doc_common</depend>
    <depend>launch_common</depend>
    <depend>node_common_cpp</depend>
    <depend>package_common_cpp</depend>
    <depend>package_common_py</depend>

    <!-- Package's exports -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>


</package>
